--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,7 +11,7 @@
     <body>
         Rango says here is the about page.<br/>
         <a href='/rango/'>Index</a><br>
-        <img src="{% static "images/rango.jpg" %}" alt="Rango Project Mascot"><br>
+        <img src="{% static "images/spaceXLogo.jpg" %}" alt="SpaceX Logo"/>
         This tutorial has been put together by Matthew McConnell <br>
     </body>
 
