--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -10,13 +10,46 @@
 
     <body>
         <h1>Rango says...</h1>
+
         <div>
-            hey there partner! <br/>
-            <strong>{{ boldmessage }}</strong><br/>
+            hey there partner!
         </div>
+
+        <h3>Most Liked Categories</h3>
+
         <div>
-            <a href="/rango/about/">About</a><br/>
-            <img src="{% static "images/spaceXLogo.jpg" %}" alt="SpaceX Logo"/>
+            {% if categories %}
+            <ul>
+                {% for category in categories %}
+                    <li>
+                        <a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+                <strong>There are no categories present.</strong>
+            {% endif %}
+        </div>
+
+        <h3>Most Viewed Pages</h3>
+
+        <div>
+            {% if pages %}
+            <ul>
+                {% for page in pages %}
+                    <li>
+                        <a href="{{ page.url }}">{{ page.title }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+                <strong>There are no pages present.</strong>
+            {% endif %}
+        </div>
+
+        <div>
+            <a href="/rango/about/">About Rango</a><br/>
+            <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango"><br>
         </div>
     </body>
 
