--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -17,6 +17,8 @@
                 {% else %}
                     <strong>No pages currently in category.</strong>
                 {% endif %}
+                <br>
+                <a href="/rango/category/{{ category.slug }}/add_page/">Add a Page</a>
             {% else %}
                 The specified category does not exist!
             {% endif %}
