--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
+{% block title_block %}
+    About Rango
+{% endblock %}
 
-    <head>
-        <title>About Rango</title>
-    </head>
-
-    <body>
-        Rango says here is the about page.<br/>
-        <a href='/rango/'>Index</a><br>
-        <img src="{% static "images/spaceXLogo.jpg" %}" alt="SpaceX Logo"/>
-        This tutorial has been put together by Matthew McConnell <br>
-    </body>
-
-</html>
+{% block body_block %}
+    Rango says here is the about page.<br/>
+    <img src="{% static "images/spaceXLogo.jpg" %}" alt="SpaceX Logo"/>
+    This tutorial has been put together by Matthew McConnell <br>
+{% endblock %}
