--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,30 +1,26 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-    <body>
-        <div>
-            {% if category %}
-                <h1>{{ category.name }}</h1>
-                {% if pages %}
-                    <ul>
-                        {% for page in pages %}
-                            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                    <strong>No pages currently in category.</strong>
-                {% endif %}
-                <br>
-                <a href="/rango/category/{{ category.slug }}/add_page/">Add a Page</a>
-            {% else %}
-                The specified category does not exist!
-            {% endif %}
-        </div>
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
 
-        <a href="/rango/">Index</a>
 
-    </body>
-</html>
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        {% if pages %}
+            <ul>
+                {% for page in pages %}
+                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <strong>No pages currently in category.</strong>
+        {% endif %}
+        <br>
+        <a href="{% url 'add_page' category.slug %}">Add a Page</a>
+    {% else %}
+        The specified category does not exist!
+    {% endif %}
+{% endblock %}
