--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -2,6 +2,8 @@
 
 {% load staticfiles %}
 
+{% load rango_template_tags %}
+
 <html>
     <head lang = "en">
         <meta charset = "UTF-8">
@@ -17,6 +19,13 @@
             {% block body_block %}
             {% endblock %}
         </div>
+
+        <div>
+            {% block sidebar_block %}
+                {% get_category_list category %}
+            {% endblock %}
+        </div>
+
         <hr>
         <div>
             <ul>
