--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -7,6 +7,6 @@
 
 {% block body_block %}
     Rango says here is the about page.<br/>
-    <img src="{% static "images/spaceXLogo.jpg" %}" alt="SpaceX Logo"/>
-    This tutorial has been put together by Matthew McConnell <br>
+    <img src="{% static "images/cat.jpg" %}" alt="Thug Cat Pic"/><br>
+    This tutorial has been put together by Matthew McConnell
 {% endblock %}
