--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -2,11 +2,12 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    About Rango
+    About
 {% endblock %}
 
 {% block body_block %}
-    Rango says here is the about page.<br/>
-    <img src="{% static "images/cat.jpg" %}" alt="Thug Cat Pic"/><br>
+    Rango says here is the about page.<br />
+    <img src="{{ MEDIA_URL }}cat.jpg" alt="Thug Cat Pic"/><br />
+    <img src="{% static 'images/coolAppa.jpg' %}" alt="Cool Appa"><br>
     This tutorial has been put together by Matthew McConnell
 {% endblock %}
